# lineracer

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  v0.0.2.md  v0.0.3.md  v0.1.0.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: dockerci.yml  main.yml  test.yml
LineRacer/: Race.py  __init__.py  app.py
app/: app.py
debug/: plot.py
doc/source/: conf.py  index.rst  lineracer.rst  modules.rst
lineracer/: PlotObjects.py  Race.py  __init__.py  app.py
src/lineracer/: Controllers.py  Race.py  RaceTrack.py  Vehicles.py  __init__.py
test/: test_racekit.py  test_racetrack.py
tests/: test_racekit.py
