
[project]
name = "lineracer"
license = "MIT"
version = "0.0.2"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4,<2.0.0",
    "scipy>=1.10.1"
]
description = "A simple turn-based multiplayer racing game."
authors = [
    { name = "Jonas Hall", email = "hall.f.jonas@gmail.com" }
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test"
]
