[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lineracer"
description = "A python package for building classic line racer games."
authors = [{name = "Ephraim"}, {name = "Jonas"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0.dev"
